src/test/resources/testcases/invalid/syntax/func_missing_block.tc
int main()
    return 0; // 错误：函数体必须是用 {} 包裹的 Block，不能直接写单条 Stmt